right-sidebar minimum width should be forced to the --sl-sidebar-width to prevent being cutoff

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -39,6 +39,10 @@
 	margin: 0 0 0 0.25rem !important;
 }
 
+.right-sidebar-container {
+	min-width: var(--sl-sidebar-width);
+}
+
 @media (min-width: 72rem) {
 	.main-pane:hover {
 		position: relative;
@@ -50,7 +54,7 @@
 		transition: transform 0.2s ease;
 	}
 
-	.sl-markdown-content .card :is(img, picture, video, canvas, svg, iframe):not(:where(.not-content *)):active { 
+	.sl-markdown-content .card :is(img, picture, video, canvas, svg, iframe):not(:where(.not-content *)):hover { 
 		transform: scale(2);
 		filter:drop-shadow(2px 2px 6px black);
 		z-index: 9;
